--- a/templates/default/dkms.conf.erb
+++ b/templates/default/dkms.conf.erb
@@ -1,5 +1,5 @@
 PACKAGE_NAME="ixgbevf"
-PACKAGE_VERSION="<%= node.ixgbevf.version %>"
+PACKAGE_VERSION="<%= node['ixgbevf']['version'] %>"
 CLEAN="cd src/; make clean"
 MAKE="cd src/; make BUILD_KERNEL=$kernelver"
 BUILT_MODULE_LOCATION[0]="src/"
